--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   margin: 0;
 }
 
@@ -50,6 +50,12 @@ html {
           justify-content: center;
   padding-top: 24px;
   padding-bottom: 24px;
+}
+
+h2 {
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 .left {
