--- a/css/hdp.css
+++ b/css/hdp.css
@@ -151,7 +151,7 @@ h2 {
 }
 
 .p .p-content .p-left .p-text {
-  line-height: 150%;
+  line-height: 200%;
   font-size: 0.9rem;
 }
 
@@ -160,7 +160,7 @@ h2 {
   height: 75px;
   border-radius: 50%;
   margin-right: 30px;
-  margin-bottom: 12px;
+  margin-bottom: 5px;
   float: left;
 }
 
@@ -174,6 +174,7 @@ h2 {
 }
 
 .p button {
+  font-family: "Source Sans Pro", sans-serif;
   outline: none;
   padding: 15px 60px;
   border: none;
@@ -182,12 +183,12 @@ h2 {
   border-radius: 3px;
   font-size: 1.1rem;
   cursor: pointer;
-  -webkit-transition: background-color 0.2s;
-  transition: background-color 0.2s;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
 }
 
 .p button:hover {
-  background-color: darkgray;
+  opacity: 0.8;
 }
 
 .footer {
