--- a/css/artist.css
+++ b/css/artist.css
@@ -159,6 +159,20 @@ html {
   }
 }
 
+.s-container .s img.teeny {
+  width: 20%;
+  margin: 10px;
+}
+
+.s-container .s .across {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 h2 {
   font-size: 2.5rem;
   font-weight: 500;
