--- a/scss/artist.scss
+++ b/scss/artist.scss
@@ -120,6 +120,14 @@ html {
                 margin: 5px;
             }
         }
+        img.teeny {
+            width: 20%;
+            margin: 10px;
+        }
+        .across {
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
