--- a/css/artist.css
+++ b/css/artist.css
@@ -174,6 +174,12 @@ html {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .s-container .s img.teeny {
+    width: 40%;
+  }
+}
+
 .s-container .s .across {
   display: -webkit-box;
   display: -ms-flexbox;
