--- a/scss/artist.scss
+++ b/scss/artist.scss
@@ -47,7 +47,7 @@ html {
             width: 50px;
             height: 50px;
             margin-top: 5px;
-    }
+        }
     }
 }
 
@@ -120,6 +120,11 @@ html {
                 margin: 5px;
             }
         }
+        img.specialTiny {
+            @media screen and (max-width: $mobile) {
+                width: 80%;
+            }
+        }
         img.teeny {
             width: 20%;
             margin: 10px;
@@ -137,6 +142,10 @@ html {
             flex-flow: row wrap;
             align-items: center;
             justify-content: center;
+
+            @media screen and (max-width: $tablet) {
+                align-items: start;
+            }
         }
     }
 }
@@ -198,4 +207,15 @@ a#back {
     margin-top: 30px;
     opacity: 0.5;
     text-decoration: none;
+}
+
+iframe {
+    @media screen and (max-width: $tablet) {
+       width: 81vw;
+       height: 45vw; 
+    }
+    @media screen and (max-width: $mobile) {
+        width: 90vw;
+        height: 50vw;
+    }
 }
