--- a/scss/hdp.scss
+++ b/scss/hdp.scss
@@ -98,7 +98,7 @@ h2 {
 
     .p-content {
         margin-top: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
 
         .p-left,
         .p-right {
@@ -136,6 +136,7 @@ h2 {
             img {
                 width: 95%;
                 margin: auto;
+                border-radius: 3px;
             }
         }
     }
