--- a/css/hdp.css
+++ b/css/hdp.css
@@ -122,7 +122,7 @@ h2 {
 
 .p .p-content {
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .p .p-content .p-left,
@@ -174,6 +174,7 @@ h2 {
 .p .p-content .p-right img {
   width: 95%;
   margin: auto;
+  border-radius: 3px;
 }
 
 .p button {
