--- a/APExhibition/css/portfolio.css
+++ b/APExhibition/css/portfolio.css
@@ -177,7 +177,6 @@ p, a {
     }
     body {
         overflow: auto;
-        /* overflow-x: hidden; */
     }
 
     .portfolio-header {
@@ -232,4 +231,11 @@ p, a {
 
     .hidden-label {
         opacity: 0 !important;
+    }
+
+    .tooltip {
+        position: fixed;
+        bottom: 5px;
+        left: 5px;
+        font-style: italic;
     }
