--- a/APExhibition/css/portfolio.css
+++ b/APExhibition/css/portfolio.css
@@ -21,6 +21,12 @@ p, a {
     -ms-animation: fadeIn ease 1s;
 }
 
+.fixedback {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+}
+
 @keyframes fadeIn {
     0% {opacity:0;}
     100% {opacity:1;}
