--- a/APExhibition/css/index.css
+++ b/APExhibition/css/index.css
@@ -70,7 +70,7 @@ p, a {
 @media (max-width: 400px) {
     .gallery-container {
         height: auto;
-
+        
         width: 90vw;
         margin-left: 5vw;
         margin-right: 5vw;
@@ -86,10 +86,18 @@ p, a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    margin: auto;
+    
+    /* height: 100%; */
+    width: 80%;
     padding: 0;
-    margin: 0;
+    /* margin: 0; */
+}
+
+@media (max-width: 400px) {
+    .gallery-grid {
+        width: 100%;
+    }
 }
 
 .col {
@@ -130,11 +138,13 @@ p, a {
     left: 0;
     right: 0;
     /* height: 100%; */
-    width: 100%;
+    /* width: 100%; */
     opacity: 0;
+    word-wrap: break-word;
+    hyphens: auto;
     transition: .3s ease;
 
-    padding: 10px;
+    padding-left: 10px;
     padding-top: 20px;
 
     cursor: pointer;
@@ -158,6 +168,7 @@ p, a {
 
 .caption-1 {
     font-weight: 700;
+    font-size: 0.8rem;
     color: rgb(209, 209, 209);
 }
 
