--- a/APExhibition/css/index.css
+++ b/APExhibition/css/index.css
@@ -53,11 +53,11 @@ p, a {
 }
 
 .gallery-container {
-    width: 70vw;
+    width: 80vw;
     max-height: 96vh;
     height: 96vh;
-    margin-left: 15vw;
-    margin-right: 15vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
     margin-top: 2vh;
     margin-bottom: 2vh;
 
@@ -115,8 +115,15 @@ p, a {
     max-width: 19%;
     text-align: left;
     /* margin: auto; */
-    margin-bottom: 13px;
+    margin-bottom: 15px;
 }
+
+@media (max-width: 900px) {
+    .portfolio {
+        margin-bottom: 10px;
+    }
+}
+
 
 .thumbnail {
     width:100%; 
