--- a/APExhibition/css/index.css
+++ b/APExhibition/css/index.css
@@ -56,8 +56,8 @@ p, a {
     width: 80vw;
     max-height: 96vh;
     height: 96vh;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 2vh;
     margin-bottom: 2vh;
 
@@ -70,10 +70,9 @@ p, a {
 @media (max-width: 800px) {
     .gallery-container {
         height: auto;
-        
+        margin-top: 50px;
+        margin-bottom: 50px;
         width: 90vw;
-        margin-left: 5vw;
-        margin-right: 5vw;
     }
 }
 
@@ -94,7 +93,7 @@ p, a {
     /* margin: 0; */
 }
 
-@media (max-width: 400px) {
+@media (max-width: 800px) {
     .gallery-grid {
         width: 100%;
     }
